--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
       <section class="hero">
         <div class="title-block">
           <div class="title-block-top">
-            <img src="assets/images/image-web-3-desktop.jpg" alt="hero image" />
+            <picture>
+              <source
+                srcset="assets/images/image-web-3-mobile.jpg"
+                media="(max-width: 576px)"
+                alt="hero image"
+              />
+              <img
+                src="assets/images/image-web-3-desktop.jpg"
+                alt="hero image"
+              />
+            </picture>
           </div>
           <div class="title-block-bottom">
             <div class="headline"><h1>The Bright Future of Web 3.0?</h1></div>
